# JHandler

./: CMakeLists.txt  LICENSE  README.md
JHandler/: CMakeLists.txt
JHandler/include/: HandlerThread.h  Log.h  Looper.h  Message.h  MessageQueue.h
JHandler/src/: Handler.cpp  HandlerThread.cpp  Log.cpp  Looper.cpp  Message.cpp  MessageQueue.cpp  MessageQueue.h
jhandler/: CMakeLists.txt
jhandler/include/: Handler.h  HandlerThread.h  Log.h  Message.h  handler.h  handler_thread.h  looper.h  message.h  message_queue.h
jhandler/src/: Handler.cpp  HandlerThread.cpp  Looper.cpp  Message.cpp  MessageQueue.cpp  handler.cpp  handler_thread.cpp  log.cpp  looper.cpp  message.cpp  message_queue.cpp
lib/: libjhandler.1.0.0.dylib  libjhandler.1.dylib  libjhandler.dylib
sample/: JHandlerDemo.cpp  JHandlerDemo.h  main.cpp
sample/common_use/: common_use.cpp  common_use.h  common_use_handler.cpp  common_use_handler.h  first_common_use_handler.cpp  first_common_use_handler.h  message_type.h  second_common_use_handler.cpp  second_common_use_handler.h
sample/diyThread/: DiyThread.cpp  DiyThread.h
sample/log/: log.h
sample/simpleUse/: SimpleUse.cpp  SimpleUse.h
sample/thread_use/: business_handler.cpp  business_handler.h  gl_handler.cpp  gl_handler.h  gl_thread.cpp  gl_thread.h  thread_use.cpp  thread_use.h
